Added advanced search feature - step 9 (last step)